# tauri-apk-repacker

./: .gitignore  README.md  build_win.sh  index.html  package.json
src/: main.ts
src-tauri/: Cargo.toml  gen-android-key.sh  key.keystore  tauri.conf.json
src-tauri/src/: apk_util.rs  constants.rs  main.rs  prepare.rs  run_command.rs  xml_util.rs
